// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CryptoUtils convertPrivateKeyToPem() 2: PEM PKCS#1 RSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIIBVgIBADANBgkqhkiG9w0BAQEFAASCAUAwggE8AgEAAkEAhVdznmYTyC1ry4bH
HkiCbyoL/HIJDKCSeMAyYaa9ZGhhvN8UrpS480u2pehxBmJiVZtD80Ui7ejidhis
SQPT+QIDAQABAkBjy4y7uxgJFH19yLRT5N7CBg0Mdehx6+dTujy6uwk6EJSuet54
vOOBr4EIA5ft5FMlNtWrwjM0bg1sDj7N9v3FAiEAubYp8+Z2owLIXCvjrj8+VJRU
7u+73YkMUol2se+0n7sCIQC3zxfkfveyWlLEylxcg6IqsWnZjdj5iKjBqdaWwkUd
2wIhAIZeMTiRlWEYkFNwRgo7JCQaNuGyf2Eo2cuWPlU8NJolAiEAij9M7SNCEfc1
gaXiSgMHmazOvD6gDy7mHqMrL0D20zkCIQCfwAhSWIYshBCwE8mYOoXfKgN+/pYI
x/kB7yKLhZkddg==
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 3: PEM PKCS#8 RSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIICdgIBADANBgkqhkiG9w0BAQEFAASCAmAwggJcAgEAAoGBAM3SXvqSKtVUYEqK
Z00JDKIyGKqNe+mCbi5OCHkljnvvmj9jl9NLyhqEK2SHuSVtP/USCfS+6LF8hSpN
muK+P4KlEXSanGv0ubZFE3ELCvyrp49V+/BpPUaifOx33sySzyQ4Ng9JlZDy5qVS
gcY0fCo0Oxii17Tr94sDhiIy7EynAgMBAAECgYBPeLA1viSN1JONlJ1IcHsRUZiW
miTDSBp1BKpe5LJ8hkqfuTvRWU1DKc97dLB3lBSC8yEnAGPmzDa629Y3QNBSVtC2
35NmJV0B3M8IX3PIMBYlI4dPjGKuNaHv+Es43fY404F1VY4e5o8emPzydLzTziI5
NWznzvllwqC3cSAMoQJBAPgAwkrcej4XzBCrL0601U+amq3jbDSRxZUIyiXgtOUR
6+XPh54qMTB2nxef6yV5svuxbcIYEA5lmBciX8fQcnECQQDUdWkDlE3Y9Nu//zG8
iYyy24tGiXzLGePjavPFhZzPm8lv06Yj/oug1IK+ZwFvGqi4vq9c9XOjs4IfkIt6
E4yXAkEAmlNulEMq1qTcWasM3z9sVgLxKjART40+lIVJtdRk/P7v+qvvyp6ayXun
eH4NR965YCKDGHr80tipkgvT6nVuIQJAeOMdj6XQ7cPVTde8yxRQ9GwrQUV1tnLS
0lHGxvsRkKeJ5JE/FXf+ptKEWiZuEHPQ0N3fFjurQtgfECrE0f9RnQJAdo6rrN8u
SXEJ3VwldZK6RzERvAkPpD2HK5HAJ7r5+vnLVht1Zt0lL+vlTqiIM3MvalMlZB1v
tPdBth0KXQr6Jg==
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 4: PEM PKCS#8 DSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIIBWwIBADCCATMGByqGSM44BAEwggEmAoGBAJFoQkSiL3fBz2gn8ZslqNxDXs9Y
MjVqz0rWhGV1RaI4h13G7fCSF08PDfhO85PykJDQt4fXu0ixzMtvpxe30F88B4eN
xvdCexe7pTQ6y4k0dk7qPkf7y4kB2quHXh40C96zEXbQk8HGB25y+Ejk7QrViD7a
hI1BfUGvVN7ebZxrAh0A2r/w+CvfXziwX9jVEXEgSeAKhT/RZOm+whGs1QKBgC3a
ofB/kY+sKdFcM5GR6HlfQ3s1v0/kgW2eMc8yPpDJD5bTOoqnxVUrUWmlSgUcFP/e
lqOOlJyxjph69w52Ev03DR94GyDaG8kc5mvZI2c4FhwP0/fbxiZ74hH52PQ4gmVF
fblwgD3g/Osvnzgda3bU5ppriblosjeofJQosAKxBB8CHQCmfX6t6QEwqaEzjo10
OiURiSrPsSH2dizYK1Wa
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 5: PEM PKCS#8 ECDSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQg+RC9AdyPFXArluWk
6KMDJZnRg6aXNXx4mTk3uwwKSqihRANCAAQPKZXQxE0Vk5S8Fzn7Vsj0f48Dipjs
2UXax/jF7DXDwHm6jaFAiSJqF9SL2XR2+0DYgb9NkuH44XQhNxkPdlkP
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 6: PEM PKCS#8 ED25519 1`] = `
"-----BEGIN PRIVATE KEY-----
MFECAQEwBQYDK2VwBCIEIBFQXo+EmadRdNDiBgu4hzoO+4+aByeuE5fm5sGuMS/7
gSEAqZWTR+5H4FEh/HkZPNMh0lVmZky5TbpsLWQBaTFnN4A=
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 7: PEM PKCS#8 ED25519 Encrypted 1`] = `
"-----BEGIN PRIVATE KEY-----
MFECAQEwBQYDK2VwBCIEIHtYTHB4ZGxOo8SGtEfoLqU2L094iBdaNnvdy5i00Hx0
gSEAvwEr3F6eO4dtGsQcaX3GWhP7jeG4JuIJBzhAPo11D08=
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 8: OpenSSH RSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIIB9wIBADANBgkqhkiG9w0BAQEFAASCAeEwggHdAgEAAoGBAMqwdEpw9jesb5V2
HMUYM0xKyWXwROkSCe6hNJRBd/mqsz+S7OSeo4yFE8CPDBzF9HksTTI3ZtacnKm1
kvJquB8DsHALJTmwAlOwVZvcmimVRm8xVq9mKbNd8GIBwtByc0NG4qJbDpNJaQAV
d0p9YnGPNDE0BMVdEdjWiS7IEpF1AgMBAAECgYBBesfW1K92ROq3ajTZJ3xLBU4S
9JAOi5lR0hpeWtgbfB30R87n/KfxWXyMFKphEUJtcvZtZqB+bJHf8ZzLW9am+xNq
9zEGN2Mi22s8XRaG09sWjLjyYaFcjJNaivnrbjx7onfuYUW2RH+B9GOe9LkkA2Gk
+OhMuG8aKgbOBiLjgQJBAOt6fRn+VOFDglwaKUgOFVd/KORX06Zqb6JiYD93dahh
U8YtMsfZi+CwvUCSnT/A8sWneuhYQiJRIv9olswRVAkCQQDcWnDCF5faSdeV75zZ
GErdpwivYKow+Xh57G1w/GSCS9rpYKPwyzXQP9lY3Ujgq7EIdBbyql1mCtLYnWzU
rCUNAgEAAgEAAkBUt5AAj6gI6r0ONbXp/IoztqfE1lbdYnzUIwBuxUU6E683mERe
PzBDPKPNbGTUFlI6Iz3kxUvqvariAbkMTRef
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 9: OpenSSH ECDSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQgLBIrlWvr1ioOIXQp
JaWrvFTDtyPX82rRKy9co6BZNrihRANCAARc7bpTE9HV2gT16w/tEpLsvAzkG3jn
qhlHYY9248/4QfEhB87RI7P2TfS0uw9nnDl5kodOvWqJ5q7irWXV1JMB
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 10: OpenSSH ED25519 1`] = `
"-----BEGIN PRIVATE KEY-----
MFECAQEwBQYDK2VwBCIEIHr0id/D2hLBp+JnyWEid3TX3uhtTADT4Gu17L/hm+h1
gSEAA2T+HCZ3LJ6ss5Y8BZGXvzlE+438qqfWA4rWyG8eyd0=
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 11: OpenSSH ED25519 Encrypted 1`] = `
"-----BEGIN PRIVATE KEY-----
MFECAQEwBQYDK2VwBCIEIPySYKzdixbBuF2SAoYbBTuRx7F8//o+xoMiUPLTX1t/
gSEASw+zS0kVH8li5P8zBVlVJ5kQ+oPLE33Gwbof8GhmeEs=
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 12: DNSSEC RSASHA512 1`] = `
"-----BEGIN PRIVATE KEY-----
MIICdwIBADANBgkqhkiG9w0BAQEFAASCAmEwggJdAgEAAoGBAPcPQM0iC92t9dqL
4FEzH8O6gsxGdlJGKJ164O9W9w18Ap3BhVy0ORAd5slnm8h83/TpJIJCWcfXNTj8
t++X5qF3rokORRJRDQFXXTyPr75DAUG18Bkb51VxPwJM+4Nb0/i3ahK9R/8JmD1K
9/bcHQ0JULcFjvw9baaLwZ3+2CN/AgMBAAECgYAAp+u2H7cEWafjcqefz5DwBhi+
zhkWUtVcxay/Ne3l/URMgu0Ft/zGzC2Gr128hIhbsBrGtcJjQ3ECu7kJS8/y8HaE
0zku19+3eh6bIekgtLzbsgQXkgqjVlXxkkQmG+1C9J3rknMyDsoV9ncSBd1VIHKv
rvRBPysIr9VlbTWc0QJBAP4jL/y9iCmonEMtnOc2LlC4Wgy3B1275qS9fVL4t5Ie
U+sOulPNfh1aFP0aawMUlV7keYJ7986ukz3sGXFThusCQQD43slDimJYl19vSEOt
+iBUB4g2xutLGrELW2c+Gci77EDuYPPSR7vLqeyknwkAO/l1u37G198HWEzg1psz
tpi9AkEA93i4X/sIPtjL4bbnFVdzXnNGbR9F8wbon/9NrKA50fXqbfjXhIeUiWyR
B67UChnfIpqFoISrWP4yr5fbZrmZpQJAL1eaK8oAaV/qXK3/ifICAloodFsk2XWr
ZkCuBCc9g1ovA+nXmBHjTJv3k11ZhfziuJ3BQSxBlhEbFs5cWdsLdQJBAM2FmHTd
o8MzaeRdiyTKqnWt9Qc1IRzA5L9TRP99yLyNgS/7ZsdjDURH2rh0OT9P2vW40EdH
W9Q78lr7GdSK8ZE=
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 13: JWK RSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBAJK0gMcsV2nh7KKm
GUpEkZSMetaB22HrGFMzjMJsBAuIp1TVVihAgf7Xopuss24TPESNhy9iThnmPJdE
vJAL9gqDU/SaGWr4w+uXA4lRQ9pze9SyRrJZA6V6W6Uv5+5ZKL6KFe2HxfRD2/MM
BGh12THe2aAI0tzKUDxYVGPOf3z1AgMBAAECgYEAhCC/zyLXg8xvxLmWE3aYK1Mu
mx2PiawkV2MZRk3kgsLL+jK+Czi2G+D4Wf78B4qZgCB7fairMNZVAeRtc8riB4s4
WRNaXKjZkfsjW1UjEmKyO/P598fhURhJCsxpvRZRaDe/D1OT5No/Aj9pAZBqxhl9
xVZ+MORbXBt8rgUIfUECQQDfwDiQW8URy/6w+rMTrF4birn9Iuh6RUTdwp/8k8V5
658qKChLtVf/SW2oAEqnpuiE/u499ZPygBPVXVVYJyzRAkEAp9mCXS5mmKkJrCZG
fy0h3yZOJkiDIKi/hwu95VcX/vZ8SM1LKJgwDjPWyvGxPZPC+fXm86Gaj6aN6Q3A
Jc+G5QJAAW42Ll4X1XRLbZA8wtxwQZbSd5bYi6eTuCM9aJz9PzlNbDSThWBkbqJm
jBNsZsP/apJCray7RGqjNdMB761YcQJBAKN7nxXTE+qs+dbKkO9drhgC3ys6hT1S
HvoR3at64Mxcl0Dxc7reQDAVHagdMFyhhs6fS4sQY9J2jtHnqrcpImECQQCXabbD
Nw6mAjjNoPjIIHzzQqDiziJTP+Te9aC+OFauo+aivnM8N1anUsTBEXKhZ0Y8mDa+
oAvMT/ns1zeE0trk
-----END PRIVATE KEY-----
"
`;

exports[`CryptoUtils convertPrivateKeyToPem() 14: JWK ECDSA 1`] = `
"-----BEGIN PRIVATE KEY-----
MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQg9BFuyjbx1c8yaaCN
FejA3x7835+7nvdGjoLqnnlz3jugCgYIKoZIzj0DAQehRANCAAR7H/hmaujipb66
kq9Z4LoAsou2es4hb7C3Lh2BHfpKoZYAcrz8KDbkG5kmp36u/TcEEtjUlvpRKd/A
pN91QJe8
-----END PRIVATE KEY-----
"
`;
